--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>template</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>SheinMiddleground</title>
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
-</body>
+  </body>
 </html>
